--- a/src/ui/slider/Slider.css
+++ b/src/ui/slider/Slider.css
@@ -1,3 +1,7 @@
 .slider {
-    background-color: white;
+    width: 70vw;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 1rem;
+    display: block;
 }
