--- a/src/frame-viewer/components/frame-explorer/FrameExplorer.css
+++ b/src/frame-viewer/components/frame-explorer/FrameExplorer.css
@@ -1,9 +1,9 @@
-.frame-navigator {
+.frame-explorer {
     width: 100%;
     height: 100%;
 }
 
-.frame-navigator__overlay {
+.frame-explorer__overlay {
     position: absolute;
     width: 100%;
     bottom: 0px;
