Refactor tooltip out of canvas

--- a/src/frame-viewer/components/frame-explorer/FrameExplorer.css
+++ b/src/frame-viewer/components/frame-explorer/FrameExplorer.css
@@ -3,7 +3,7 @@
     height: 100%;
 }
 
-.frame-explorer__overlay {
+.frame-explorer__slider-overlay {
     position: absolute;
     width: 100%;
     bottom: 0px;
