--- a/src/frame-viewer/components/frame-explorer/FrameExplorer.css
+++ b/src/frame-viewer/components/frame-explorer/FrameExplorer.css
@@ -3,6 +3,14 @@
     height: 100%;
 }
 
+.frame-explorer__tooltip-overlay {
+    position: absolute;
+    width: fit-content;
+    top: 0;
+    margin-top: 0.4rem;
+    margin-left: 0.4rem;
+}
+
 .frame-explorer__slider-overlay {
     position: absolute;
     width: 100%;
