--- a/src/ui/Tooltip/Tooltip.css
+++ b/src/ui/Tooltip/Tooltip.css
@@ -1,5 +1,23 @@
 .tooltip {
-    background-color: white;
-    min-width: 16rem;
+    background-color: rgba(245, 245, 245, 0.9);
+    max-width: fit-content;
+    border: 4px solid green;
     padding: 1rem;
+}
+
+.source-code-pro-font {
+    font-family: "Source Code Pro", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-size: 0.9rem;
+    font-style: normal;
+}
+
+.tooltip-text--no-margin {
+    margin: 0;
+}
+
+.tooltip-text--margin-top {
+    margin: 0;
+    margin-top: 1rem;
 }
