--- a/src/global.css
+++ b/src/global.css
@@ -10,3 +10,15 @@ body, html {
     width: 100%;
     height: 100%;
 }
+
+.source-code-pro-font {
+    font-family: "Source Code Pro", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-size: 0.9rem;
+    font-style: normal;
+}
+
+.no-margin {
+    margin: 0;
+}
