--- a/src/ui/toast/Toast.css
+++ b/src/ui/toast/Toast.css
@@ -1,12 +1,6 @@
-.tooltip {
+.toast {
     background-color: rgba(245, 245, 245, 0.9);
     max-width: fit-content;
     border: 4px solid green;
     padding: 1rem;
-    margin-bottom: 0.4rem;
-}
-
-.tooltip-text--margin-top {
-    margin: 0;
-    margin-top: 1rem;
 }
