--- a/src/ui/slider/Slider.css
+++ b/src/ui/slider/Slider.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 0 0.4rem;
     padding: 0.4rem;
 }
 
@@ -13,17 +14,18 @@
     background-color: rgba(245, 245, 245, 0.9);
     height: 0.8rem;
     width: 70vw;
-    margin-right: auto;
     margin-left: auto;
+    border-radius: 8px;
 }
 
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 1.2rem;
-    height: 3.2rem;
+    height: 2.4rem;
     background: green;
     cursor: pointer;
+    border-radius: 8px;
 }
 
 .slider::-webkit-slider-thumb:hover {
