--- a/src/ui/toast/Toast.css
+++ b/src/ui/toast/Toast.css
@@ -1,6 +1,8 @@
 .toast {
     background-color: rgba(245, 245, 245, 0.9);
     max-width: fit-content;
+    min-width: 1.2rem;
     border: 4px solid green;
     padding: 1rem;
+    text-align: center;
 }
